--- a/client/styles.css
+++ b/client/styles.css
@@ -1,11 +1,25 @@
 body {
-	font-family: helvetica, sans-serif;
-	color: grey;
+	
+	/*font-family: 'Sofia', cursive;*/
+	font-family: 'Pacifico', cursive;
+	/*color: grey;*/
+	background-image: url(../fern.png);
+	background-size: 8%;
 }
 
 header {
 	text-align: center;
 	margin: 20px 0;
+	font-size: 30px;
+}
+
+button {
+	font-family: 'Pacifico', cursive;
+	font-size: 16px;
+}
+
+.options {
+	text-align: center;
 }
 
 form {
@@ -20,18 +34,32 @@ form {
 	margin: 0 auto;
 }
 
+.dictionary-container {
+
+}
+
 .hidden {
 	display: none;
+}
+
+.current-dictionary {
+	border: 1px solid red;
+	max-width: 500px;
+	margin: 0 auto;
 }
 
 .letters-container {
 	display: flex;
 	flex-direction: column;
 	border: 1px solid green;
+	display: inline-block;
+	font-family: 'Cabin Sketch', cursive;
 }
 
-.adjectives-container {
+.adjectives-container input{
 	border: 1px solid blue;
+	display: inline-block;
+	font-family: 'Cabin Sketch', cursive;
 }
 
 .letter {
