--- a/client/styles.css
+++ b/client/styles.css
@@ -1,18 +1,12 @@
 html {
-	/*background-color: #ffffff;
-	opacity: 0.5;
-	filter: alpha(opacity=50);*/
 	background-image: url(../images/ferns-01.png);
-	background-size: 30%;
+	background-size: 25%;
 	height: 100%;
 	width: 100%;
 }
 
 body {
-	/*font-family: 'Sofia', cursive;*/
 	font-family: 'Delius Swash Caps', cursive;
-	/*color: grey;*/
-
 	box-sizing: border-box;
 	background: rgba(255, 255, 255, 0.8);
 	margin: 0 auto;
@@ -20,23 +14,18 @@ body {
 	min-height: 100%;
 	width: 100%;
 	color: #b27866;
-
 }
-
-/*main {
-	background: rgba(255, 255, 255, 0.5);
-	box-shadow: 1px 2px 3px rgba(255,255,255,0.5);
-	max-width: 90%;
-	margin: 0 auto;
-}*/
 
 header {
 	text-align: center;
-	margin: 20px 0 0 0;
-	font-size: 40px;
-	height: 160px;
+	font-size: 36px;
+	height: 130px;
 	display: flex;
 	flex-direction: column;
+}
+
+.title {
+	margin: 30px 0;
 }
 
 .screenshot-div {
@@ -44,25 +33,23 @@ header {
 		-webkit-transform: rotate(-30deg); /* Safari */
 		transform: rotate(-30deg);
 	position: relative;
-	width: 500px;
-	top: -180px;
+	width: 420px;
+	top: -160px;
 	right: 80px;
 	font-family: 'Comfortaa', monospace;
-	font-size: 14px;
+	font-size: 12px;
 	letter-spacing: 2px;
 	line-height: 1.4;
 	padding-left: 10px;
-	/*background: rgba(255, 255, 255, 0.7);
-	box-shadow: 1px 2px 3px rgba(255,255,255,0.7);*/
 	border-radius: 20px;
 	border: 1px solid #eaefdc;
 	background-color: #eaefdc;
 	color: #cca599;
 }
-/* #eaefdc #dbe2c6 */
 
 .screenshot-text {
 	text-align: center;
+	margin-right: 110px;
 }
 
 .new-poem, .view-dictionary, .custom-poem, .random-poem, .search {
@@ -74,6 +61,14 @@ header {
 	box-shadow: 1px 2px 3px rgba(255,255,255,0.7);
 	cursor: pointer;
 	letter-spacing: 1.1px;
+}
+
+h3 {
+	font-size: 0.9em;
+}
+
+h4 {
+	font-size: 0.8em;
 }
 
 .new-poem, .view-dictionary {
@@ -112,6 +107,7 @@ header {
 	word-spacing: 6px;
 	padding: 20px;
 	margin: 0 auto;
+	font-size: 16px;
 }
 
 .dictionary-container {
@@ -124,7 +120,7 @@ img {
 }
 
 .options {
-	margin: 30px 0 20px 0;
+	margin: 10px 0 20px 0;
 	text-align: center;
 }
 
@@ -180,8 +176,6 @@ form {
 	padding: 10px;
 	background-color: #eaefdc;
 	color: #cca599;
-	/*background: rgba(255, 255, 255, 0.4);
-	box-shadow: 1px 2px 3px rgba(255,255,255,0.4);*/
 	max-width: 800px;
 	margin: 0 auto;
 	border: 1px solid #eaefdc;
@@ -195,11 +189,11 @@ form {
 
 .enter-name {
 	display: inline-block;
-	font-size: 18px;
+	font-size: 16px;
 }
 
 .input-container {
-	margin: 40px 0 20px 0;
+	margin: 30px 0 10px 0;
 	text-align: center;
 }
 
@@ -208,39 +202,28 @@ form {
 }
 
 .letters-container {
-	/*display: flex;
-	flex-direction: column;*/
-	/*border: 1px solid green;*/
 	display: inline-block;
 	font-family: 'Comfortaa', cursive;
 	margin-left: 160px;
 	color: #b27866;
-	/*background: rgba(255, 255, 255, 0.4);
-	box-shadow: 1px 2px 3px rgba(255,255,255,0.4);*/
 }
 
 .adjectives-container, .adjectives-container input {
-	/*border: 1px solid blue;*/
 	display: inline-block;
 	font-family: 'Delius Swash Caps', cursive;
 	border: none;
 	color: #c39688;
-	/*background: rgba(255, 255, 255, 0.4);
-	box-shadow: 1px 2px 3px rgba(255,255,255,0.4);
-	border-radius: 20px;*/
 }
 
 .letter {
-	font-size: 4em;
+	font-size: 3.6em;
 	height: 95px;
 	padding: 0 15px;
 }
 
 #pos-0, #pos-1, #pos-2, #pos-3, #pos-4, #pos-5, #pos-6, #pos-7, #pos-8, #pos-9, #pos-10, #pos-11, #pos-12, #pos-13, #pos-14, #pos-15, #pos-16, #pos-17, #pos-18, #pos-19, #pos-20 {
-	font-size: 2.2em;
-	/*max-width: 300px;*/
+	font-size: 1.9em;
 	height: 93px;
-	/*border: 1px solid orange;*/
 }
 
 .color-change {
